for 3.0 for now

--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
 
   <body>
     <h1>Drawing Machine!</h1>
-    <div id="upload-button">
-    </div>
-    <div id="sketch-holder">
-    </div>
-    <div id="imgAdd-button">
-    </div>
-    <div id="reset-button">
-    </div>
-    <div id="save-button">
-    </div>
+
+    <div id="sketch-holder"></div>
+
+    <div id="imgAdd-button"></div>
+
+    <div id="reset-button"></div>
+
+    <div id="save-button"></div>
+
   </body>
 
 </html>
