--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
-
 <!DOCTYPE html>
 
 <html lang="en">
-  <head>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-    <script src="sketch.js"></script>
-  </head>
 
-  <body>
-    <h1>Drawing Machine!</h1>
+<head>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/p5.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.2.0/addons/p5.sound.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
+  <meta charset="utf-8" />
+  <script src="sketch.js"></script>
+</head>
 
-    <div id="sketch-holder"></div>
+<body>
+  <h1>Drawing Machine!</h1>
 
-    <div id="imgAdd-button"></div>
+  <div id="sketch-holder"></div>
 
-    <div id="reset-button"></div>
+  <!-- <form>
+    <label for="red">RED</label>
+    <input type="range" min="0" max="255" step="1" value="0" id="red" name="red" onchange="reset()">
 
-    <div id="save-button"></div>
+    <label for="green">GREEN</label>
+    <input type="range" min="0" max="255" step="1" value="0" id="green" name="green" onchange="reset()">
 
-  </body>
+    <label for="blue">BLUE</label>
+    <input type="range" min="0" max="255" step="1" value="0" id="blue" name="blue" onchange="reset()">
+  </form> -->
+
+  <div id="reset-button"></div>
+
+  <div id="save-button"></div>
+
+</body>
 
 </html>
