erase doesnt work

--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
 
     <div id="line-controls">
 
-
       <div id="line-red"><h2><br>Line Color</h2><h3>Red</h3></div>
       <div id="line-green"><h3>Green</h3></div>
       <div id="color-block-line"></div>
@@ -47,7 +46,6 @@
     </div>
 
     <div id="line-weight-control">
-
 
       <div id="line-weight"><h2 style="padding-bottom:0px"><br>Line Weight</h2></div>
 
@@ -59,6 +57,7 @@
 
     <div id="reset-button"></div>
     <div id="save-button"></div>
+    <pre><p>Hold down any key to erase!                                                      Made By: Winnie Liang</p></pre>
 
   </div>
 
