--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 <body>
 
   <h1 style="padding-left:0px">Drawing Machine!</h1>
+  <!-- 3.9 for making the canvas fu11screen -->
+  <!-- <h1 style="padding-left:20px">Drawing Machine!</h1> -->
 
   <div id="drawing-space">
 
@@ -51,13 +53,17 @@
 
     </div>
 
+
+
   </div>
 
   <div id="bottom-controls">
 
-    <div id="reset-button"></div>
     <div id="save-button"></div>
-    <pre><p>Hold down any key to erase!                                                      Made By: Winnie Liang</p></pre>
+    <div id="reset-button"></div>
+    <pre><p><strong>||</strong> SPACE: erase tool || ALT: alpha fade || CONTROL: controlled random color <strong>||</strong></p></pre>
+    <!-- 3.9 for making the canvas fu11screen -->
+    <!-- <pre><p>Hold down any key to erase!</p></pre> -->
 
   </div>
 
