added extra controls

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     <div id="save-button"></div>
     <div id="reset-button"></div>
-    <pre><p><strong>||</strong> SPACE: erase tool || ALT: alpha fade || CONTROL: controlled random color <strong>||</strong></p></pre>
+    <p>|| SHIFT: erase tool || ALT: alpha fade || CONTROL: controlled random color ||</p>
     <!-- 3.9 for making the canvas fu11screen -->
     <!-- <pre><p>Hold down any key to erase!</p></pre> -->
 
