--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <h1 style="padding-left:0px">Drawing Machine!</h1>
+  <h1 style="padding-left:0px">Sketch Space!</h1>
   <!-- 3.9 for making the canvas fu11screen -->
   <!-- <h1 style="padding-left:20px">Drawing Machine!</h1> -->
 
