--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <h1 style="padding-left:0px">Sketch Space!</h1>
   <!-- 3.9 for making the canvas fu11screen -->
   <!-- <h1 style="padding-left:20px">Drawing Machine!</h1> -->
+  <p>A workspace for thinking and fun! Try combining the features and play with the colors!</p>
 
   <div id="drawing-space">
 
