--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
 
-  <h1 style="padding-left:0px">Sketch Space!</h1>
+  <h1 style="padding-left:0px"; style="padding-bottom:0px">Sketch Space!</h1>
   <!-- 3.9 for making the canvas fu11screen -->
   <!-- <h1 style="padding-left:20px">Drawing Machine!</h1> -->
   <p style="margin-top:0px">A workspace for thinking and fun! Try combining the features and play with the colors!</p>
